--- a/app/index.html
+++ b/app/index.html
@@ -3,75 +3,118 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-   <head>
-       <meta charset="utf-8">
-       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-       <title>Lentolaskuri 2</title>
-       <meta name="description" content="">
-       <meta name="viewport" content="width=device-width">
-       <link rel="stylesheet" href="styles/main.css">
-   </head>
-   <body data-views="calculator maps">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title>Lentolaskuri</title>
+  <meta name="description" content="">
+  <metaname="viewport" content="width=device-width">
+  <link rel="stylesheet" href="styles/main.css">
+</head>
+<body>
 
-    <div class="container calculator">
-      <div class="row">
-        <div class="span12">
-          <h1>Lentolaskuri2</h1>
-        </div>
+  <div class="container calculator">
+    <div class="row">
+      <div class="span12">
+        <h1>Lentolaskuri</h1>
       </div>
+    </div>
 
-      <div class="row">
-        <div class="span3 passengersWidget">
-          <legend>
-            Matkustajia
-          </legend>
-          <input type="number" placeholder="1" class="span3" />
-        </div>
-        <div class="span3 roundtripWidget">
-          <!-- <legend>Meno-paluu</legend> -->
-          <legend>&nbsp;</legend>
-          <div class="btn-group">
-            <button type="button" class="btn active">Meno</button>
-            <button type="button" class="btn roundtrip">Meno-paluu</button>
+    <div class="row">
+      <div class="span6">
+
+        <div class="row-fluid">
+          <div class="span4 passengersWidget">
+            <legend>
+              Matkustajia
+            </legend>
+            <input type="number" placeholder="1" class="span12" />
+          </div>
+          <div class="span8 roundtripWidget">
+            <!-- <legend>Meno-paluu</legend> -->
+            <legend>&nbsp;</legend>
+            <div class="btn-group">
+              <button type="button" class="btn active">Meno</button>
+              <button type="button" class="btn roundtrip">Meno-paluu</button>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="row">
-        <div class="span6">
-          <legend>Reitti</legend>
-          <div class="route"></div>
+
+        <div class="row-fluid">
+          <div class="span12">
+            <legend>Reitti</legend>
+            <div class="route"></div>
+          </div>
         </div>
-      </div>
 
-      <div class="controls row-fluid">
-        <div class="span6 legInputWidget">
-          <button class="btn btn-block"><span>Valitse lentokenttä</span> <i class="caret"></i></button>
-          <input type="hidden"/>
+        <div class="controls row-fluid">
+          <div class="span12 legInputWidget">
+            <button class="btn btn-block"><span>Valitse lentokenttä</span> <i class="caret"></i></button>
+            <input type="hidden"/>
+          </div>
         </div>
-      </div>
 
-      <div class="row-fluid">
-        <div class="span6 totalWidget"></div>
-      </div>
+        <div class="row-fluid">
+          <div class="span12 totalWidget"></div>
+        </div>
 
-      <div class="row-fluid">
-        <div class="span6">
-          <ul class="nav nav-tabs">
-            <li class="active"><a href="#map" data-toggle="tab">Kartta</a></li>
-            <li><a href="#operation" data-toggle="tab">Laskurin toiminta</a></li>
-          </ul>
-          <div class="tab-content">
-            <div class="tab-pane active" id="map">
-              <div id="gmap" class="map"></div>
+        <div class="row-fluid">
+          <div class="span12">
+            <ul class="nav nav-tabs">
+              <li class="active"><a href="#map" data-toggle="tab">Kartta</a></li>
+              <li><a href="#operation" data-toggle="tab">Laskurin toiminta</a></li>
+            </ul>
+            <div class="tab-content">
+              <div class="tab-pane active" id="map">
+                <div id="gmap" class="map"></div>
+              </div>
+              <div class="tab-pane" id="operation"></div>
             </div>
-            <div class="tab-pane" id="operation">
-            </div>
+          </div>
         </div>
+
       </div>
 
-    <!-- build:js scripts/main.js -->
-    <script data-main="scripts/main" src="components/requirejs/require.js"></script>
-    <!-- endbuild -->
-  </body>
+      <div class="span6">
+        <legend>Maksu</legend>
+
+        <p>
+          Lentolipun hintaan ei sisälly lentomatkasta syntyvien ilmastovaikutusten kustannuksia vaan ne jäävät nykyisten ja
+          tulevien polvien maksettavaksi. Tarjoamme sinulle tamperelaisen päästömaksun, jolla voit osoittaa ottavasi
+          vastuuta kulutuksesi ympäristövaikutuksista. Maksu ei kompensoi päästöjäsi, koska emme voi taata, että
+          rahoitettavilla hankkeilla saavutetaan lentosi päästöjä vastaavat päästövähennykset. Sen sijaan maksu tukee
+          kestävän kehityksen arvojen mukaista yleishyödyllistä kohdetta, joka suoraan ja välillisesti auttaa saavuttamaan
+          päästövähennyksiä. Vapaaehtoisen päästömaksun tarkoitus on herätellä huomaamaan lentoliikenteen ilmastovaikutuksia
+          ja kannustaa pohtimaan liikkumisvalintoja.</p><p><a href="/index.php">Lentolaskurilla</a> saat selville, kuinka
+          paljon lentomatkasi tuottaa päästöjä. Laskuri laskee sinulle päästömäärään perusteella päästömaksun. Yhden
+          kasvihuonekaasutonnin hinta on asetettu 25 euroksi.</p><p>Voit halutessasi lahjoittaa päästömaksun esimerkiksi
+          toiselle Tampereen kaupungin tämän vuotisista kohteista, <a href="/../">Onandjokwen lähetyssairaalan</a>
+          peruskorjaukseen. Lahjoituksen voit tehdä <a href="http://www.martinus.fi/?sid=12">Martinus-säätiön kautta</a>.
+        </p>
+        <p>
+          Voit myös valita päästömaksullesi jonkin muun kohteen käyttämällä muiden tarjoamia vapaaehtoisia päästömaksupalveluja.
+          Kun pohdit, millaista toimintaa rahoitat vapaaehtoisella päästömaksulla, tutustu, miten paljon rahoitettavista
+          kohteista, rahojen käytöstä ja toiminnan valvonnasta on tietoa tarjolla. Jos aiot käyttää palveluja, jotka lupaavat
+          hyvittää aiheuttamasi päästöt, selvitä, miten tämä lupaus toteutetaan.
+        </p>
+      </div>
+    </div>
+
+  </div>
+
+  <footer class="footer">
+    <div class="container">
+      <a href="http://www.ekokumppanit.fi/" title="Ekokumppanit" rel="home" class="ekokumppanit">
+        <img src="images/ekokumppanit.png" />
+      </a>
+    </div>
+  </footer>
+
+  <a href="https://github.com/Ekokumppanit/Lentolaskuri"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub"></a>
+
+  <!-- build:js scripts/main.js -->
+  <script data-main="scripts/main" src="components/requirejs/require.js"></script>
+  <!-- endbuild -->
+</body>
 </html>
