Jos käyttäjällä ei ole javascript päällä, kerrotaan asiasta ja sumennetaan toiminnallisuus

--- a/app/index.html
+++ b/app/index.html
@@ -20,8 +20,15 @@
       </div>
     </div>
 
+    <noscript>
+      <div class="alert">
+        Lentolaskuri vaatii toimiakseen JavaScriptin, jota sinulla ei näytä olevan päällä.<br>
+        <a href="http://www.enable-javascript.com" target="_blank">JavaScriptin saat päälle näitä ohjeita noudattamalla.</a>
+      </div>
+    </noscript>
+
     <div class="row">
-      <div class="span6">
+      <div class="span6 js-enabled-content">
 
         <div class="row-fluid">
           <div class="span4 passengersWidget">
