Styling the layout and moving parts around

--- a/app/index.html
+++ b/app/index.html
@@ -69,43 +69,37 @@
 
         <div class="row-fluid">
           <div class="span12">
-            <ul class="nav nav-tabs">
-              <li class="active"><a href="#map" data-toggle="tab">Kartta</a></li>
-              <li><a href="#operation" data-toggle="tab">Laskurin toiminta</a></li>
-            </ul>
-            <div class="tab-content">
-              <div class="tab-pane active" id="map">
-                <div id="gmap" class="map"></div>
-              </div>
-              <div class="tab-pane" id="operation"></div>
-            </div>
+            <legend>Kartta</legend>
+            <div id="gmap" class="map"></div>
           </div>
         </div>
 
       </div>
 
-      <div class="span6">
-        <legend>Maksu</legend>
+      <div class="span6 textcontent">
+        <ul class="nav nav-tabs">
+          <li class="active"><a href="#payment" data-toggle="tab">Maksu</a></li>
+          <li><a href="#operation" data-toggle="tab">Laskurin toiminta</a></li>
+        </ul>
+        <div class="tab-content">
+          <div class="tab-pane active" id="payment">
 
-        <p>
-          Lentolipun hintaan ei sisälly lentomatkasta syntyvien ilmastovaikutusten kustannuksia vaan ne jäävät nykyisten ja
-          tulevien polvien maksettavaksi. Tarjoamme sinulle tamperelaisen päästömaksun, jolla voit osoittaa ottavasi
-          vastuuta kulutuksesi ympäristövaikutuksista. Maksu ei kompensoi päästöjäsi, koska emme voi taata, että
-          rahoitettavilla hankkeilla saavutetaan lentosi päästöjä vastaavat päästövähennykset. Sen sijaan maksu tukee
-          kestävän kehityksen arvojen mukaista yleishyödyllistä kohdetta, joka suoraan ja välillisesti auttaa saavuttamaan
-          päästövähennyksiä. Vapaaehtoisen päästömaksun tarkoitus on herätellä huomaamaan lentoliikenteen ilmastovaikutuksia
-          ja kannustaa pohtimaan liikkumisvalintoja.</p><p><a href="/index.php">Lentolaskurilla</a> saat selville, kuinka
-          paljon lentomatkasi tuottaa päästöjä. Laskuri laskee sinulle päästömäärään perusteella päästömaksun. Yhden
-          kasvihuonekaasutonnin hinta on asetettu 25 euroksi.</p><p>Voit halutessasi lahjoittaa päästömaksun esimerkiksi
-          toiselle Tampereen kaupungin tämän vuotisista kohteista, <a href="/../">Onandjokwen lähetyssairaalan</a>
-          peruskorjaukseen. Lahjoituksen voit tehdä <a href="http://www.martinus.fi/?sid=12">Martinus-säätiön kautta</a>.
-        </p>
-        <p>
-          Voit myös valita päästömaksullesi jonkin muun kohteen käyttämällä muiden tarjoamia vapaaehtoisia päästömaksupalveluja.
-          Kun pohdit, millaista toimintaa rahoitat vapaaehtoisella päästömaksulla, tutustu, miten paljon rahoitettavista
-          kohteista, rahojen käytöstä ja toiminnan valvonnasta on tietoa tarjolla. Jos aiot käyttää palveluja, jotka lupaavat
-          hyvittää aiheuttamasi päästöt, selvitä, miten tämä lupaus toteutetaan.
-        </p>
+            <p>
+              Lentolipun hintaan ei sisälly lentomatkasta syntyvien ilmastovaikutusten kustannuksia vaan ne jäävät nykyisten ja tulevien polvien maksettavaksi. Tarjoamme sinulle tamperelaisen päästömaksun, jolla voit osoittaa ottavasi vastuuta kulutuksesi ympäristövaikutuksista. Maksu ei kompensoi päästöjäsi, koska emme voi taata, että rahoitettavilla hankkeilla saavutetaan lentosi päästöjä vastaavat päästövähennykset. Sen sijaan maksu tukee kestävän kehityksen arvojen mukaista yleishyödyllistä kohdetta, joka suoraan ja välillisesti auttaa saavuttamaan päästövähennyksiä. Vapaaehtoisen päästömaksun tarkoitus on herätellä huomaamaan lentoliikenteen ilmastovaikutuksia ja kannustaa pohtimaan liikkumisvalintoja.</p>
+            <p>
+              Lentolaskurilla saat selville, kuinka paljon lentomatkasi tuottaa päästöjä. Laskuri laskee sinulle päästömäärään perusteella päästömaksun. Yhden kasvihuonekaasutonnin hinta on asetettu 25 euroksi.
+            </p>
+            <p>
+              Voit halutessasi lahjoittaa päästömaksun esimerkiksi toiselle Tampereen kaupungin tämän vuotisista kohteista, <a href="http://www.onandjokwe.iway.na">Onandjokwen lähetyssairaalan</a> peruskorjaukseen. Lahjoituksen voit tehdä <a href="http://www.martinus.fi/?sid=12">Martinus-säätiön kautta</a>.
+            </p>
+            <p>
+              Voit myös valita päästömaksullesi jonkin muun kohteen käyttämällä muiden tarjoamia vapaaehtoisia päästömaksupalveluja. Kun pohdit, millaista toimintaa rahoitat vapaaehtoisella päästömaksulla, tutustu, miten paljon rahoitettavista kohteista, rahojen käytöstä ja toiminnan valvonnasta on tietoa tarjolla. Jos aiot käyttää palveluja, jotka lupaavat hyvittää aiheuttamasi päästöt, selvitä, miten tämä lupaus toteutetaan.
+            </p>
+
+          </div>
+          <div class="tab-pane" id="operation"></div>
+        </div>
+
       </div>
     </div>
 
