--- a/app/index.html
+++ b/app/index.html
@@ -1,122 +1,131 @@
 <!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="fi"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang="fi"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9" lang="fi"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="fi"> <!--<![endif]-->
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Lentolaskuri</title>
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="styles/main.css">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>Lentolaskuri</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
 
-  <div class="container calculator">
-    <div class="row">
-      <div class="span12">
-        <h1>Lentolaskuri</h1>
-      </div>
-    </div>
-
-    <noscript>
-      <div class="alert">
-        Lentolaskuri vaatii toimiakseen JavaScriptin, jota sinulla ei näytä olevan päällä.<br>
-        <a href="http://www.enable-javascript.com" target="_blank">JavaScriptin saat päälle näitä ohjeita noudattamalla.</a>
-      </div>
-    </noscript>
-
-    <div class="row">
-      <div class="span6 js-enabled-content">
-
-        <div class="row-fluid">
-          <div class="span4 passengersWidget">
-            <legend>
-              Matkustajia
-            </legend>
-            <input type="number" placeholder="1" class="span12" />
-          </div>
-          <div class="span8 roundtripWidget">
-            <legend>&nbsp;</legend>
-            <div class="btn-group">
-              <button type="button" class="btn active">Meno</button>
-              <button type="button" class="btn roundtrip">Meno-paluu</button>
+    <div class="container calculator">
+        <div class="row">
+            <div class="span12">
+                <h1>Lentolaskuri</h1>
             </div>
-          </div>
         </div>
 
+        <noscript>
+            <div class="alert">
+                Lentolaskuri vaatii toimiakseen JavaScriptin, jota sinulla ei näytä olevan päällä.<br>
+                <a href="http://www.enable-javascript.com" target="_blank">JavaScriptin saat päälle näitä ohjeita noudattamalla.</a>
+            </div>
+        </noscript>
 
-        <div class="row-fluid">
-          <div class="span12">
-            <legend>Reitti</legend>
-            <div class="route"></div>
-          </div>
+        <div class="row">
+            <div class="span6 js-enabled-content">
+                <div class="row-fluid">
+                    <div class="span4 passengersWidget">
+                        <legend>Matkustajia</legend>
+                        <input type="number" placeholder="1" class="span12" />
+                    </div>
+                    <div class="span8 roundtripWidget">
+                        <legend>&nbsp;</legend>
+                        <div class="btn-group">
+                            <button type="button" class="btn active">Meno</button>
+                            <button type="button" class="btn roundtrip">Meno-paluu</button>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="row-fluid">
+                    <div class="span12">
+                        <legend>Reitti</legend>
+                        <div class="route"></div>
+                    </div>
+                </div>
+
+                <div class="controls row-fluid">
+                    <div class="span12 legInputWidget">
+                        <button class="btn btn-block">
+                            <span>Valitse lentokenttä</span>
+                            <i class="caret"></i>
+                        </button>
+                        <input type="hidden"/>
+                    </div>
+                </div>
+
+                <div class="row-fluid">
+                    <div class="span12 totalWidget"></div>
+                </div>
+
+                <div class="row-fluid">
+                    <div class="span12">
+                        <legend>Kartta</legend>
+                        <div id="gmap" class="map"></div>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="span6 textcontent">
+                <ul class="nav nav-tabs">
+                    <li class="active"><a href="#payment" data-toggle="tab">Maksu</a></li>
+                    <li><a href="#operation" data-toggle="tab">Laskurin toiminta</a></li>
+                </ul>
+                <div class="tab-content">
+                    <div class="tab-pane active" id="payment">
+
+                        <h2>Miksi lentomaksu?</h2>
+                        <p>
+                            Vapaaehtoisella lentomaksulla osoitat ottavasi
+                            vastuuta kulutuksesi ympäristövaikutuksista.
+                        </p>
+                        <p>
+                            Lentolippujen hintoihin ei sisälly lentomatkoista syntyvien
+                            ilmastovaikutusten kustannuksia vaan ne jäävät nykyisten ja
+                            tulevien polvien maksettavaksi. Maksu ei kompensoi päästöjäsi,
+                            koska emme voi taata, että rahoitettavilla hankkeilla saavutetaan
+                            lentosi päästöjä vastaavat päästövähennykset.
+                        </p>
+                        <p>
+                            Sen sijaan maksu tukee kestävän kehityksen arvojen mukaista
+                            yleishyödyllistä kohdetta, joka suoraan ja välillisesti
+                            auttaa saavuttamaan päästövähennyksiä. Vapaaehtoisen päästömaksun
+                            tarkoitus on herätellä huomaamaan lentoliikenteen ilmastovaikutuksia
+                            ja kannustaa pohtimaan liikkumisvalintoja.
+                        </p>
+
+
+                    </div>
+                    <div class="tab-pane" id="operation"></div>
+                </div>
+
+            </div>
         </div>
 
-        <div class="controls row-fluid">
-          <div class="span12 legInputWidget">
-            <button class="btn btn-block"><span>Valitse lentokenttä</span> <i class="caret"></i></button>
-            <input type="hidden"/>
-          </div>
-        </div>
-
-        <div class="row-fluid">
-          <div class="span12 totalWidget"></div>
-        </div>
-
-        <div class="row-fluid">
-          <div class="span12">
-            <legend>Kartta</legend>
-            <div id="gmap" class="map"></div>
-          </div>
-        </div>
-
-      </div>
-
-      <div class="span6 textcontent">
-        <ul class="nav nav-tabs">
-          <li class="active"><a href="#payment" data-toggle="tab">Maksu</a></li>
-          <li><a href="#operation" data-toggle="tab">Laskurin toiminta</a></li>
-        </ul>
-        <div class="tab-content">
-          <div class="tab-pane active" id="payment">
-
-            <p>
-              Lentolipun hintaan ei sisälly lentomatkasta syntyvien ilmastovaikutusten kustannuksia vaan ne jäävät nykyisten ja tulevien polvien maksettavaksi. Tarjoamme sinulle tamperelaisen päästömaksun, jolla voit osoittaa ottavasi vastuuta kulutuksesi ympäristövaikutuksista. Maksu ei kompensoi päästöjäsi, koska emme voi taata, että rahoitettavilla hankkeilla saavutetaan lentosi päästöjä vastaavat päästövähennykset. Sen sijaan maksu tukee kestävän kehityksen arvojen mukaista yleishyödyllistä kohdetta, joka suoraan ja välillisesti auttaa saavuttamaan päästövähennyksiä. Vapaaehtoisen päästömaksun tarkoitus on herätellä huomaamaan lentoliikenteen ilmastovaikutuksia ja kannustaa pohtimaan liikkumisvalintoja.</p>
-            <p>
-              Lentolaskurilla saat selville, kuinka paljon lentomatkasi tuottaa päästöjä. Laskuri laskee sinulle päästömäärään perusteella päästömaksun. Yhden kasvihuonekaasutonnin hinta on asetettu 25 euroksi.
-            </p>
-            <p>
-              Voit halutessasi lahjoittaa päästömaksun esimerkiksi toiselle Tampereen kaupungin tämän vuotisista kohteista, <a href="http://www.onandjokwe.iway.na">Onandjokwen lähetyssairaalan</a> peruskorjaukseen. Lahjoituksen voit tehdä <a href="http://www.martinus.fi/?sid=12">Martinus-säätiön kautta</a>.
-            </p>
-            <p>
-              Voit myös valita päästömaksullesi jonkin muun kohteen käyttämällä muiden tarjoamia vapaaehtoisia päästömaksupalveluja. Kun pohdit, millaista toimintaa rahoitat vapaaehtoisella päästömaksulla, tutustu, miten paljon rahoitettavista kohteista, rahojen käytöstä ja toiminnan valvonnasta on tietoa tarjolla. Jos aiot käyttää palveluja, jotka lupaavat hyvittää aiheuttamasi päästöt, selvitä, miten tämä lupaus toteutetaan.
-            </p>
-
-          </div>
-          <div class="tab-pane" id="operation"></div>
-        </div>
-
-      </div>
     </div>
 
-  </div>
+    <footer class="footer">
+        <div class="container">
+            <a href="http://www.ekokumppanit.fi/" title="Ekokumppanit" rel="home" class="ekokumppanit">
+                <img src="images/ekokumppanit.png" />
+            </a>
+        </div>
+    </footer>
 
-  <footer class="footer">
-    <div class="container">
-      <a href="http://www.ekokumppanit.fi/" title="Ekokumppanit" rel="home" class="ekokumppanit">
-        <img src="images/ekokumppanit.png" />
-      </a>
-    </div>
-  </footer>
+    <a href="https://github.com/Ekokumppanit/Lentolaskuri"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub"></a>
 
-  <a href="https://github.com/Ekokumppanit/Lentolaskuri"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub"></a>
-
-  <!-- build:js scripts/main.js -->
-  <script data-main="scripts/main" src="components/requirejs/require.js"></script>
-  <!-- endbuild -->
+    <!-- build:js scripts/main.js -->
+    <script data-main="scripts/main" src="components/requirejs/require.js"></script>
+    <!-- endbuild -->
 </body>
 </html>
