Add one possible way to show donation links, with styling.

--- a/app/index.html
+++ b/app/index.html
@@ -104,6 +104,15 @@
                             ja kannustaa pohtimaan liikkumisvalintoja.
                         </p>
 
+                        <h3>Lahjoita ympäristötyöhön</h3>
+                        <p>
+                            <div class="donationtarget">
+                                <a href="#" target="_blank">
+                                    <img src="http://placehold.it/200x200&text=Logo" width="200" height="200" alt="Logo" style="float: left">
+                                    <span>Tee lahjoitus X:lle</span>
+                                </a>
+                            </div>
+                        </p>
 
                     </div>
                     <div class="tab-pane" id="operation"></div>
